@@ -1,3 +1,7 @@
+  08 Mar 2021; Manuel Friedli <manuel@gentoo.org> -files/reposilite-2.9.4.cdn,
+  -reposilite-2.9.6.ebuild, -reposilite-2.9.8.ebuild:
+  dev-util/reposilite: Prune very old ebuilds.
+
 *reposilite-2.9.18 (08 Mar 2021)
 
   08 Mar 2021; Manuel Friedli <manuel@gentoo.org> +files/reposilite-2.9.18.cdn,
